--- a/cv/index.html
+++ b/cv/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nguyen Dinh Duy | CV</title>
+    <title>Tran Manh Hung | CV</title>
 </head>
 
-<body onload="window.location.href = '/cv/TranManhHung_CV.pdf'">
+<body onload="window.location.href = '/cv/Tran_Manh_Hung -CV.pdf'">
 </body>
 
 </html>
