--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="nav-footer">
             <div>
                 <div>Tran Manh Hung</div>
-                <div style="font-size: 10px; font-weight: 300;">FRESHER WEB DEVELOPER</div>
+                <div style="font-size: 10px; font-weight: 300;">SOFTWARE ENGINEER</div>
             </div>
             <img src="/images/avatar_cropped.png" alt="">
         </div>
@@ -132,10 +132,8 @@
                 <div class="role">Fresher Web Developer</div>
 
 
-                <div class="summary">I'm currently
-                    marjoring in software
-                    engineering at FPT University
-                    HCM. I love programming, UI
+                <div class="summary">Current Software Engineer with 2 years experience specializing in the frontend and 
+backend development, infrastructure automa- tion. I love programming, UI
                     design and am on my way to
                     becoming a Mobile and
                     Frontend Web Developer.
