--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@
     <title>Tran Manh Hung | CV</title>
 </head>
 
-<body onload="window.location.href = '/cv/Tran_Manh_Hung -CV.pdf'">
+<body onload="window.location.href = '/cv/08-2023_Tran Manh Hung_CV.pdf'">
 </body>
 
 </html>
