--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                     <span class="name"> Hung Tran</span>
                 </div>
 
-                <div class="role">Fresher Web Developer</div>
+                <div class="role">Front End/Full Stack Developer</div>
 
 
-                <div class="summary">Current Software Engineer with 2 years experience specializing in the frontend and 
+                <div class="summary">Current Software Engineer at One Mount Group with 2+ years experience specializing in the frontend and 
 backend development, infrastructure automa- tion. I love programming, UI
                     design and am on my way to
                     becoming a Mobile and
